deploy: LetTTGACO/1874@c32e4c5e78b33c7cce6a3651d4ec69111e94258d

--- a/data/index.html
+++ b/data/index.html
@@ -382,7 +382,7 @@
 
 
 <div class="statis">
-    <span class="count"><a href="/tags">25</a></span>
+    <span class="count"><a href="/tags">24</a></span>
     <span class="name">标签</span>
 </div>
 
@@ -427,7 +427,7 @@
         },
         xAxis: {
             type: 'category',
-            data: ["2021-04","2021-05","2021-06","2021-07","2021-08","2021-09","2021-10","2021-11","2021-12","2022-01","2022-02","2022-03","2022-04"]
+            data: ["2021-05","2021-06","2021-07","2021-08","2021-09","2021-10","2021-11","2021-12","2022-01","2022-02","2022-03","2022-04","2022-05"]
         },
         yAxis: {
             type: 'value',
@@ -437,7 +437,7 @@
                 name: '文章篇数',
                 type: 'line',
                 color: ['#6772e5'],
-                data: [0,2,0,0,1,1,1,0,2,2,3,2,3],
+                data: [2,0,0,1,1,1,0,2,2,3,2,3,0],
                 markPoint: {
                     symbolSize: 45,
                     color: ['#fa755a','#3ecf8e','#82d3f4'],
@@ -503,7 +503,7 @@
         xAxis: [
             {
                 type: 'category',
-                data: ["Java","React","自顶向下学习React源码","Webpack","Hexo","静态资源优化","npm","代码规范","Linux","Git"]
+                data: ["Java","React","自顶向下学习React源码","Webpack","Hexo","Node","静态资源优化","npm","代码规范","Linux"]
             }
         ],
         yAxis: [
@@ -516,7 +516,7 @@
                 type: 'bar',
                 color: ['#82d3f4'],
                 barWidth : 18,
-                data: [8,7,6,3,3,2,2,2,1,1],
+                data: [8,7,6,3,3,2,2,2,2,1],
                 markPoint: {
                     symbolSize: 45,
                     data: [{
